Fix: Update styling for categoriaImagen and infoGrid components for improved layout and alignment

--- a/src/Pages/cart/producto/Producto.module.css
+++ b/src/Pages/cart/producto/Producto.module.css
@@ -123,17 +123,23 @@ button.addToCartButton {
 
 .categoriaImagen {
   width: 100%;
-  /* height: 200px; */
   object-fit: contain;
+
+  max-width: 500px;
+
+  display: block;
+  margin: 0 auto;
 }
 
 .infoGrid {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 40px;
+  gap: 20px;
   width: 100%;
-  margin: 40px 0;
+  margin: 80px auto;
+
+  max-width: 1500px;
 }
 
 /* Columna izquierda y derecha */
@@ -141,6 +147,9 @@ button.addToCartButton {
 .usosContainer {
   width: 50%;
   text-align: justify;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* <-- centro horizontal */
 }
 
 /*TABLETS*/
